--- a/style.css
+++ b/style.css
@@ -286,6 +286,83 @@ h1 .pillar-title{
      
 }
 
+.donate-container{
+    text-align: center;
+    margin-top: 80px;
+    margin-bottom: 80px;
+}
+.donate-subtitle{
+    margin-top: 24px;
+}
+
+.money-card-contianer{
+    /* border:2px solid black; */
+    margin-top:32px ;
+    margin-bottom:32px ;
+    display:flex;
+    justify-content:space-evenly;
+}
+.money-card-1{
+    /* border:2px solid black; */
+    width:240px;
+    height: 120px;
+    border-radius:16px;
+    background-color: #ffffff;
+    cursor: pointer;
+    transform: 0.2s;
+    box-shadow: 5px 8px 8px rgb(170, 169, 169);
+    margin-bottom: 32px;
+  
+}
+.money-card-1:hover{
+    opacity: 0.8;
+}
+.money-2{
+    background-color: #ffffff;
+}
+.money-3{
+    background-color: #f8e8ca;
+}
+.money-4{
+    background-color:#f8e8ca;
+}
+.money-1:hover,.money-2:hover{
+    background-color: rgb(208, 207, 207);
+    color: rgb(46, 45, 45);
+}
+.money-3:hover,.money-4:hover{
+    background-color:#ffffff;
+    color: rgb(46, 45, 45);
+}
+
+.money-card-1 .amount h1{
+    padding:35px;
+    font-size: 35px;
+}
+.other-amount input{
+    border:none;
+    border-radius: 5px;
+   height: 64px; 
+   width: 1062px;
+   margin-bottom: 32px;
+   font-size: 20px;
+   color:rgb(152, 151, 151);
+   text-align: center;
+}
+
+.money-btn{
+    border: none;
+    border-radius:8px ;
+    padding:17px 34px;
+    background-color: #006A50;
+    color: #ffffff;
+    font-size: 18px;
+    font-weight: 600;
+
+}
+.money-btn:hover{
+    opacity: 0.8;
+}
 
 
 
