footer section added

--- a/style.css
+++ b/style.css
@@ -135,7 +135,7 @@ h1 .pillar-title{
    
 }
 .subtitle{
-   color:rgb(68, 68, 68);
+   color:rgb(56, 56, 56);
    margin-bottom: 5px;
 }
 .pillar-box-1 img{
@@ -178,6 +178,7 @@ h1 .pillar-title{
     width:330px;
     height: 265px;
     background-color:rgb(210, 231, 250);
+    box-shadow:  5px 8px 8px rgb(192, 191, 191);
 }
 .vision-box-2{
     background-color:#C6E4D6 ;
@@ -206,6 +207,7 @@ h1 .pillar-title{
     color: white;
     font-size: 16px;
     transition: 0.2s;
+    box-shadow:  5px 8px 8px rgb(192, 191, 191);
 }
 .btn-2{
    background-color:#09A15C ;
@@ -216,7 +218,13 @@ h1 .pillar-title{
 }
 .vision-btn:hover{
        opacity: 0.8;
+       box-shadow:  5px 8px 8px rgb(160, 159, 159);
 }
+
+/* statment */
+
+
+
 
 .recent-box-container{
     /* border: 2px solid black; */
@@ -244,6 +252,7 @@ h1 .pillar-title{
     margin:24px ;
     background-color:#FFFFFF  ;
     margin-bottom: 24px;
+    box-shadow:  5px 8px 8px rgb(192, 191, 191);
    
     
 }
@@ -278,11 +287,14 @@ h1 .pillar-title{
     font-family: Fira Sans;
     font-weight: 700;
     font-size: 16px;
+    box-shadow:  5px 8px 8px rgb(172, 171, 171);
     cursor: pointer;
     transition: 0.1s;
 }
 .recent-box-1-btn:hover{
     opacity: 0.8;
+    box-shadow:  5px 8px 8px rgb(151, 151, 151);
+  
      
 }
 
@@ -348,6 +360,10 @@ h1 .pillar-title{
    font-size: 20px;
    color:rgb(152, 151, 151);
    text-align: center;
+   box-shadow:  5px 8px 8px rgb(210, 209, 209);
+}
+.other-amount input:hover{
+    box-shadow:  5px 8px 8px rgb(170, 169, 169);
 }
 
 .money-btn{
@@ -358,9 +374,53 @@ h1 .pillar-title{
     color: #ffffff;
     font-size: 18px;
     font-weight: 600;
+    box-shadow:  5px 8px 8px rgb(192, 191, 191);
 
 }
 .money-btn:hover{
+    opacity: 0.8;
+
+}
+
+.footer-section{
+    border:2px solid black;
+    border-radius:24px ;
+    text-align: center;
+    background-color:#C6E4D6 ;
+    margin: 50px;
+    padding:90px;
+
+   
+}
+.footer-input{
+    display: flex;
+    /* border: 2px solid rgb(249, 21, 21);
+    */
+    justify-content: space-between;
+    width: 750px;
+    margin-left: 100px;
+}
+.input-email{
+    padding-left:20px ;
+    height: 56px;
+    width: 750px;
+    background-color: white;
+    font-size: 18px;
+    border-radius:8px ;
+    border: none;
+   
+}
+.footer-btn{
+   padding: 17px 40px;
+    background-color:#006A50;
+    border-radius: 5px;
+    border: none;
+    color: #ffffff;
+    font-size: 18px;
+    font-weight: 600;
+    margin-left: -7px;
+}
+.footer-btn:hover{
     opacity: 0.8;
 }
 
