--- a/style.css
+++ b/style.css
@@ -47,12 +47,14 @@ body{
     border-radius: 8px;
     border:2px solid rgb(10, 138, 10);
     transition: 0.2s;
+
 }
 
 .header-btn:hover{
     background-color: aliceblue;
     cursor: pointer;
     border-color: rgb(27, 245, 45);
+    box-shadow:  5px 8px 8px rgb(192, 191, 191);
 }
 
 .banner-container{
@@ -67,6 +69,7 @@ body{
     padding-right:50px;
     padding-top: 80px;
     padding-bottom: 80px;
+    box-shadow:  5px 2px 15px gray;
     /* width: 1280px;
     height: 560px; */
 }
@@ -91,10 +94,13 @@ body{
     color: white;
     border-radius:8px ;
     border:none;
+   
 }
 .baanner-btn:hover{
     opacity: 0.8;
     cursor: pointer;
+  
+    box-shadow:  5px 2px 10px gray;
 }
 .main-container{
     margin-top: 190px;
@@ -132,6 +138,7 @@ h1 .pillar-title{
     width: 280px;
     height: 200px;
     padding: 24px;
+    box-shadow:  5px 4px 8px rgb(192, 191, 191);
    
 }
 .subtitle{
@@ -178,7 +185,7 @@ h1 .pillar-title{
     width:330px;
     height: 265px;
     background-color:rgb(210, 231, 250);
-    box-shadow:  5px 8px 8px rgb(192, 191, 191);
+    /* box-shadow:  5px 8px 8px rgb(192, 191, 191); */
 }
 .vision-box-2{
     background-color:#C6E4D6 ;
@@ -214,7 +221,7 @@ h1 .pillar-title{
 }
 
 .btn-3{
-
+    background-color:#FFC239 ;
 }
 .vision-btn:hover{
        opacity: 0.8;
@@ -224,15 +231,29 @@ h1 .pillar-title{
 /* statment */
 .statment{
     margin-top:32px ;
-    background-color: #ffffff;
-    border:2px solid black;
+    background-color: #f5f3f3;
+    border:2px solid rgb(224, 223, 223);
     border-radius:16px ;
     padding-top:48px;
     padding-bottom: 48px;
     padding-left: 24px;
     padding-right: 24px;
+    color: black;
+   
+    background:linear-gradient(
+        0deg,
+        rgb(244, 242, 242) 10%,
+        rgba(246, 244, 244, 0) 120%
+        ),url(assets/koma.jpg);
+        background-repeat: no-repeat;
+        background-size: 150px 150px;
+    
+} 
+
+
+.statment h2{
+    margin-bottom: 10px;
 }
-.statment
 
 
 
@@ -240,7 +261,7 @@ h1 .pillar-title{
     /* border: 2px solid black; */
     /* margin: 50px; */
     width:1220px;
-    margin-top: 20px;
+    margin-top: 25px;
     
 
     
@@ -259,7 +280,7 @@ h1 .pillar-title{
     gap: 32px;
     height: 300px;
     display:flex;
-    margin:24px ;
+    /* margin:24px ; */
     background-color:#FFFFFF  ;
     margin-bottom: 24px;
     box-shadow:  5px 8px 8px rgb(192, 191, 191);
@@ -365,7 +386,7 @@ h1 .pillar-title{
     border:none;
     border-radius: 5px;
    height: 64px; 
-   width: 1062px;
+   width: 1132px;
    margin-bottom: 32px;
    font-size: 20px;
    color:rgb(152, 151, 151);
@@ -385,6 +406,7 @@ h1 .pillar-title{
     font-size: 18px;
     font-weight: 600;
     box-shadow:  5px 8px 8px rgb(192, 191, 191);
+    transition: 0.2s;
 
 }
 .money-btn:hover{
@@ -429,6 +451,7 @@ h1 .pillar-title{
     font-size: 18px;
     font-weight: 600;
     margin-left: -7px;
+    transition: 0.2s;
 }
 .sub-btn:hover{
     opacity: 0.8;
